Updated application properties to configure h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=JustDoIt
+spring.application.name=Just-Do-It
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:~/Projects/Just-Do-It/db;AUTO_SERVER=TRUE;
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.thymeleaf.cache=false
+
