Implemented Repository class and a command line runner to create and find some mock tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
